--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,8 @@
     "shorUrlBase": "http://chr.dc",
     "shortUrlLength": "6",
     "404page": "/NotFound/404.html",
+    "urls.json": "Data/urls.json",
+    "urls.logFile": "urls_json.log",
     "Logging": {
         "LogLevel": {
             "Default": "Information",
