Added events and message broadcasting using SignalR.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,14 @@
 {
-    "shorUrlBase": "http://chr.dc",
-    "shortUrlLength": "6",
-    "404page": "/NotFound/404.html",
     "urls.json": "Data/urls.json",
     "urls.logFile": "urls_json.log",
+
+    "404page": "/NotFound/404.html",
+
+    "shorUrlBase": "http://chr.dc",
+    "shortUrlLength": 6,
+
+    "messageHub": "/msg",
+
     "Logging": {
         "LogLevel": {
             "Default": "Information",
